# rag_backend

./: .env.sample  .gitignore  config.py  main.py  pyproject.toml
db/: db.py
models/: booking.py  user_metadata.py
pinecone_sdk/: add_vector.py
routers/book_meetings/: booking.py
routers/chat_redis/: redis_chat.py
routers/upload_file/: ingest.py
utils/: booking_llm.py  booking_utils.py  chunker.py  document_processer.py  extractors.py  redis_client.py  text_embeder.py
