[project]
name = "ai-leran"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "google-genai>=1.70.0",
    "pinecone>=8.1.1",
    "psycopg2>=2.9.11",
    "pymupdf>=1.27.2.2",
    "redis>=7.4.0",
    "sentence-transformers>=5.3.0",
    "sqlmodel>=0.0.38",
]
